name:                hs-bt-tracker
version:             0.1.0.0
synopsis:            Haskell UDP BitTorrent tracker
description:         Please see README.md
homepage:            https://github.com/greatest-ape/hs-bt-tracker
license:             GPL-3
license-file:        LICENSE.txt
author:              Joakim Frostegård
maintainer:          joakim.frostegard@gmail.com
copyright:           2016-2017 Joakim Frostegård
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hs-bt-tracker
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O
  build-depends:       array
                     , base
                     , binary
                     , bytestring
                     , containers
                     , hashable
                     , lifted-base
                     , network
                     , random
                     , simple
                     , stm
                     , time
                     , transformers
                     , unix
                     , unordered-containers
  default-language:    Haskell2010

test-suite simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hs-bt-tracker
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
